--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: phanikmullapudi/iscalecc-prometheus-exporter
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
