--- a/chart/templates/serviceaccount.yaml
+++ b/chart/templates/serviceaccount.yaml
@@ -20,7 +20,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: {{ include "iscalecc-prometheus-exporter.serviceAccountName" . }}
-  namespace: default
+  namespace: monitoring
 roleRef:
   kind: ClusterRole
   name: {{ include "iscalecc-prometheus-exporter.serviceAccountName" . }}
